# hackathon-fisi2022

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  after_deploy.sh  fly.toml  pyproject.toml  requirements.txt
fisinos/: asgi.py  manage.py  settings.py  wsgi.py
fisinos/fisinos/: asgi.py  settings.py  urls.py  wsgi.py
fisinos/main/: admin.py  forms.py  models.py  urls.py  views.py
fisinos/main/migrations/: 0001_initial.py  0002_announcement_pub_date_announcement_users.py  0003_remove_announcement_users.py  0008_alter_announcement_topics_alter_topic_suscribers_and_more.py
fisinos/main/templates/main/: home.html  profile.html  topics.html
fisinos/notify/: apps.py  signals.py
fisinos/static/css/: styles.css
fisinos/templates/: header.html
fisinos/templates/account/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signup.html
main/migrations/: 0004_topic_suscribers.py  0005_rename_user_userprofile.py  0006_alter_announcement_topics.py  0007_alter_announcement_topics_alter_userprofile_topics.py
main/templates/main/: profile.html  topics.html
notify/: signals.py
static/css/: styles.css
templates/account/: email.html  login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
