[tool.poetry]
name = "hackathon-fisi2022"
version = "0.1.0"
description = ""
authors = ["DangoMelon <gerardo_art@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
crispy-bootstrap5 = "^0.7"
django-allauth = "^0.51.0"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
